tests/baselines/reference/pathMappingBasedModuleResolution_withExtension_MapedToNodeModules(strict=true).errors.txt
/a.ts(1,20): error TS7016: Could not find a declaration file for module 'foo/bar/foobar.js'. '/node_modules/foo/bar/foobar.js' implicitly has an 'any' type.


==== /tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "*": ["node_modules/*", "src/types"]
            },
            "allowJs": true,
            "outDir": "bin"
        }
    }
    
==== /a.ts (1 errors) ====
    import foobar from "foo/bar/foobar.js";
                       ~~~~~~~~~~~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module 'foo/bar/foobar.js'. '/node_modules/foo/bar/foobar.js' implicitly has an 'any' type.
    
==== /node_modules/foo/bar/foobar.js (0 errors) ====
    module.exports = { a: 10 };
    